--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       }
 
       .sun path {
-        fill: #6baed6;
+        fill: cornflowerblue;
       }
 
       .planet path {
-        fill: #9ecae1;
+        fill: yellowgreen;
       }
 
       .annulus path {
-        fill: #c6dbef;
+        fill: darkorange;
       }
     </style>
   </head>
